# src/api/routes/navigate.routes.js
@@ -1,0 +1,8 @@
+const express = require("express");
+const router = express.Router();
+
+const { positioning } = require("../../services/navigate.service");
+
+router.post("/positioning", positioning);
+
+module.exports.navigateRouter = router;
